--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+# **代表所有目录下
+**/mvnw.cmd
+**/.mvn
+.idea
+**/mvnw
+**/.gitignore
+**/target/
