添加后台管理页面,使用renren-fast-vue进行联调

--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -40,6 +40,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- mybatis-plus-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
