分布式开发环境的搭建,注册中心,配置中心,远程调用

--- a/gulimall-coupon/pom.xml
+++ b/gulimall-coupon/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.huhusw</groupId>
     <artifactId>gulimail-coupon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gulimail-coupon</name>
+    <name>gulimall-coupon</name>
     <description>鼓励商场优惠券服务</description>
 
     <properties>
