--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -4,6 +4,14 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: huhusw
+  cloud:
+    nacos:
+      discovery:
+        # nacos 服务的地址
+        server-addr: 127.0.0.1:8848
+  application:
+    # 在服务中心显示的名称
+    name: gulimall-coupon
 
 mybatis-plus:
   #  \u6620\u5C04\u6587\u4EF6\u4F4D\u7F6E
@@ -12,3 +20,6 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+
+server:
+  port: 7000
