--- a/gulimall-member/pom.xml
+++ b/gulimall-member/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.huhusw</groupId>
     <artifactId>gulimail-member</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gulimail-member</name>
+    <name>gulimall-member</name>
     <description>谷粒商城用户服务</description>
 
     <properties>
