--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.huhusw</groupId>
     <artifactId>gulimail-order</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gulimail-order</name>
+    <name>gulimall-order</name>
     <description>谷粒商城订单模块</description>
 
     <properties>
