--- a/gulimall-ware/pom.xml
+++ b/gulimall-ware/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.huhusw</groupId>
     <artifactId>gulimail-ware</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gulimail-ware</name>
+    <name>gulimall-ware</name>
     <description>谷粒商城仓储服务</description>
 
     <properties>
