--- a/gulimall-coupon/src/main/resources/bootstrap.properties
+++ b/gulimall-coupon/src/main/resources/bootstrap.properties
@@ -2,3 +2,16 @@
 spring.application.name=gulimall-coupon
 # \u914D\u7F6E\u4E2D\u5FC3\u7684\u5730\u5740
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+# \u6307\u5B9A\u547D\u540D\u7A7A\u95F4,\u9ED8\u8BA4\u4E3Apublic
+spring.cloud.nacos.config.namespace=
+# \u6307\u5B9A\u7EC4,\u9ED8\u8BA4\u4E3ADEFAULT_GROUP
+spring.cloud.nacos.config.group=DEFAULT_GROUP
+
+# \u914D\u7F6E\u591A\u4E2A\u914D\u7F6E\u96C6
+# \u7279\u5B9A\u547D\u540D\u7A7A\u95F4\u4E0B\u7684dataid
+spring.cloud.nacos.config.extension-configs[0].data-id=
+# \u7279\u5B9A\u547D\u540D\u7A7A\u95F4\u4E0B\u7684dataid
+spring.cloud.nacos.config.extension-configs[0].group=
+# \u662F\u5426\u52A8\u6001\u5237\u65B0
+spring.cloud.nacos.config.extension-configs[0].refresh=
+
