--- a/renren-fast/src/main/resources/application-dev.yml
+++ b/renren-fast/src/main/resources/application-dev.yml
@@ -32,6 +32,11 @@ spring:
                 wall:
                     config:
                         multi-statement-allow: true
+    cloud:
+        nacos:
+            server-addr: 127.0.0.1:8848
+    application:
+        name: renren-fast
 
 
 ##多数据源的配置
